# antibot-shield

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
antibot_shield/: __init__.py  challenge.py  config.py  engine.py  middleware.py  models.py
antibot_shield/checks/: __init__.py  automation.py  base.py  burst.py  header_anomaly.py  method_guard.py  path_scanner.py  rate_limit.py  recent_404.py  strict_path.py  user_agent.py
antibot_shield/i18n/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  ko.json  pt.json  ru.json  tr.json  uk.json  zh.json
antibot_shield/static/: challenge.css  challenge.js
antibot_shield/storage/: __init__.py  base.py  factory.py  local.py  redis_store.py
antibot_shield/templates/: challenge.html
docs/: achievement-log.md
examples/: docker-compose.redis.yml  protected_service.py  user_challenge_page.html
examples/static/: user-page.css  user-page.js
examples/templates/: user_challenge_page.html
tests/: test_middleware.py
tests/test_project/: README.md  app.py  script_job.py
