[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antibot-shield"
version = "0.1.0"
description = "Adaptive anti-bot protection layer for Python services"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Vadim Shiba", email = "vadimshiba@users.noreply.github.com" }
]
license = { text = "MIT" }
keywords = ["antibot", "security", "fastapi", "middleware", "ddos", "waf"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
  "Topic :: Security",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "redis>=5.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.3"
]

[project.urls]
Homepage = "https://github.com/vadimshiba/antibot-shield"
Repository = "https://github.com/vadimshiba/antibot-shield"
Issues = "https://github.com/vadimshiba/antibot-shield/issues"

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["antibot_shield*"]

[tool.setuptools.package-data]
antibot_shield = ["templates/*.html", "static/*.css", "static/*.js", "i18n/*.json"]
